--- a/proyectomachineml/conf/base/parameters.yml
+++ b/proyectomachineml/conf/base/parameters.yml
@@ -1,4 +1,23 @@
-train:
-  test_size: 0.2
-  random_state: 42
-
+unsupervised:
+  numerical_columns:
+    - gdp_per_capita_norm
+    - life_expectancy_norm
+    - gdp_variation_norm
+  categorical_columns:
+    - income_group
+  kmeans:
+    n_clusters: 4
+    random_state: 42
+  dbscan:
+    eps: 0.3
+    min_samples: 5
+  agglomerative:
+    n_clusters: 4
+    linkage: ward
+  pca:
+    n_components: 2
+  umap:
+    n_components: 2
+    n_neighbors: 15
+    min_dist: 0.1
+    random_state: 42
